# openwebui-langgraph

./: .env.example  .gitignore  README.md  actor_generate_query.py  chroma_backend.py  component_helpers.py  component_websearch.py  fastapi_server.py  globalsource.py  init_env.py  langgraph_agent.py  pipeline_stream.py  pyproject.toml  requirements.txt  start.sh  test_tool.py  tool_local_search.py  tool_search.py  tool_time.py  trim_msg.py
my_langgraph_agent/: __init__.py  globalsource.py  init_env.py  langgraph_agent.py
my_langgraph_agent/component/: component_helpers.py  component_websearch.py  trim_msg.py
my_langgraph_agent/openai_server/: auth.py  authorized_dispatch.py  main.py  schema.py
my_langgraph_agent/openwebui_server/: fastapi_server.py
my_langgraph_agent/subgraph/: actor_generate_query.py
my_langgraph_agent/tool/: tool_local_search.py  tool_search.py  tool_time.py
my_langgraph_agent/vector_store/: __init__.py  chroma_backend.py
