[project]
name = "my_langgraph_agent"
version = "0.1.0"
description = "My langgraph agent"
dependencies = [
    "fastapi",
    "langchain-core",
    "langgraph",
    "pydantic",
    "requests",
    "typing-extensions",
    "tavily-python",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "transformers",
    "pytz",
    "langchain-chroma",
    "jinja2"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2"]